Add Maven build and dependency management